--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "first backend for deploy",
   "main": "app.js",
   "scripts": {
-"start":"node app.js"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/Zeeshanakbar444/backend_app#readme",
   "dependencies": {
+    "axios": "^1.9.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "nodemon": "^3.1.10"
